Add draft of selection sort

--- a/programme/Makefile
+++ b/programme/Makefile
@@ -1,8 +1,8 @@
 CC=mpicc
 CFLAGS=-c -Wall
-SOURCES=counting_sort_mpi.c bucket_sort_mpi.c util.c
+SOURCES=counting_sort_mpi.c bucket_sort_mpi.c selection_sort_mpi.c util.c
 OBJECTS=$(SOURCES:.c=.o)
-EXECUTABLES=counting_sort_mpi bucket_sort_mpi
+EXECUTABLES=counting_sort_mpi bucket_sort_mpi selection_sort_mpi
 
 all: $(EXECUTABLES)
 
@@ -11,6 +11,9 @@ counting_sort_mpi: $(OBJECTS)
 
 bucket_sort_mpi: $(OBJECTS)
 	$(CC) bucket_sort_mpi.o util.o -o $@
+
+selection_sort_mpi: $(OBJECTS)
+	$(CC) selection_sort_mpi.o util.o -o $@
 
 .c.o:
 	$(CC) $(CFLAGS) $< -o $@
